--- a/index.html
+++ b/index.html
@@ -23,24 +23,7 @@
                     <div class="d-flex align-items-start ms-2">
                         <div class="nav flex-column nav-pills me-3" id="v-pills-tab" data-bs-toggle="collapse" role="tablist" aria-orientation="vertical">
                             <button class="nav-link " data-bs-toggle="pill" href="#austria" type="button" role="tab" aria-controls="austria" aria-selected="true">Austria</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="collapse" data-bs-target="#brazil" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Brazil</button>
-                            <button class="nav-link " id="brazil-tb" data-bs-toggle="pill" data-bs-target="#" type="button" role="tab" aria-controls="brazil" aria-selected="false">Portugal</button>
+                            
                         </div>
                     </div>
                 </div>
@@ -70,9 +53,9 @@
                     Population
                 </div>
             </div>
-            <div>
-                <div class="collapse" id="austria">will this work ?</div>
-                <div class="collapse" id="brazil">Is this working ?</div>
+            <div class="tab-content">
+                <div class="tab-pane fade show active" id="austria">will this work ?</div>
+                <div class="tab-pane fade" id="brazil">Is this working ?</div>
 
             </div>
             
